# drf-practice

./: .coverage  .gitignore  db.sqlite3  pyproject.toml
core/: admin.py  settings.py  urls.py
shopping_list/: admin.py  models.py  urls.py
shopping_list/api/: permissions.py  serializers.py  views.py  viewsets.py
shopping_list/fixtures/: initial_shoppping_lists_with_items.json
shopping_list/migrations/: 0001_initial.py  0002_shoppinglist_members.py
shopping_list/tests/: conftest.py  tests.py
