[tool.poetry]
name = "drf-shopping"
version = "0.1.0"
description = ""
authors = ["Henrik <henrikhiltunen1@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_shopping"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
djangorestframework = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
